--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
 <div align = "center">
 <h1> Guy (Guyguy) Kahana </h1>
 <p>I'm Guy Kahana, 16 from Jerusalem.<p>
+<img src = "me.jpg">
 </div>
 </body>
 </html>
