--- a/contactme.html
+++ b/contactme.html
@@ -13,11 +13,12 @@
 </div>
 <div align = "center">
 <h1> Contact Me </h1>
+<br>
 <form>
-First Name: <input type = "text" name = "fname"><br>
-Last Name: <input type = "text" name = "fname"><br>
-Email: <input type = "email" name = "fname"><br>
-<input type = "submit" value = "send!"><br>
+First Name: <input type = "text" name = "fname"><br><br>
+Last Name: <input type = "text" name = "fname"><br><br>
+Email: <input type = "email" name = "fname"><br><br>
+<input type = "submit" value = "send!"><br><br>
 
 </form>
 </div>
